_sass/_responsive.scss
@media (max-width: 120rem)
{
	.container
	{
		width: 100%;
	}

	.nav-bar
	{
		padding-left: 2rem;
		padding-right: 2rem;
	}

	.slick-slide img
	{
		width: 100%;
	}

	.text-content img
	{
		// preventing WP from resizing images arbitrarily
		max-width: 100% !important;
		width: auto !important;
	    height: auto !important;
	}
}

@media (max-width: 60rem)
{
	.nav-bar
	{
		nav ul
		{
			display: none;
	    float: none;
			margin-top: 3.5rem;
			line-height: inherit;

			li
			{
				display: block;
				line-height: inherit;

				a
				{
					display: block;
					text-align: right;
					padding-left: 0;
				}
			}
		}

		.hamburger
		{
			display: block;
		}
	}

	.text-content
	{
	  margin-left: 15%;
	  margin-right: 15%;
	}

	.nav-bar .container .row
	{
		margin-right: 0;
		margin-left: 0;
	}

	.slider
	{
	  .slick-prev
	  {
	    left: 1.5rem;
	  }
	  .slick-next
	  {
	    right: 0.8rem;
	  }
	}

	.multiple-slider
	{
	  .slick-prev
	  {
	    left: calc(1.5rem - 12.5%);
	  }
	  .slick-next
	  {
	    right: calc(0.8rem - 12.5%);
	  }
		.column
		{
			a
			{
				padding: 1rem 2rem;
			}
			
			&:hover
			{
				background: transparent;
			}
		}
	}
}

@media (max-width: 549px)
{
	ul.gallery li
	{
		width: 100%;
		padding-bottom: 50%;
	}

	.hide-for-mobile
	{
		display: none;
	}
}

@media (max-width: 25rem)
{
	ul.gallery li
	{
		padding-bottom: 66.66%;
	}
}

